<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registerActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="1">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/regisFormDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regisForm"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
        </TableRow>


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userName"

                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/userNameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:inputType="text"
                android:labelFor="@id/userName" />

        </TableRow>



        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/password"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/passwordValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:ems="10"

                android:inputType="textPassword" />

        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/mobileNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobileNo"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/mobileNoValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:ems="10"
                android:inputType="phone"
                android:labelFor="@id/mobileNo" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/emailId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailId"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/emailIdValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:labelFor="@id/emailId" />

        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_column="1"
                android:checkedButton="@+id/gender">

                <RadioButton
                    android:id="@+id/maleChecked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/maleChecked" />

                <RadioButton
                    android:id="@+id/femaleChecked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/femaleChecked" />
            </RadioGroup>
        </TableRow>
<!--
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/drivingLicenseNo"
                android:id="@+id/licenseNo" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/licenseNoValue"
                android:layout_column="1"

                android:inputType="text" />

        </TableRow>
-->
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/org"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Organisation"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/orgValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:inputType="text"
                android:labelFor="@id/org" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/vehicleNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicleNo"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/vehicleNoValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/proposedStartLoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startLoc"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/proposedStartLocationVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/proposedEndLoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endLoc"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/proposedEndLocVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />

        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/userType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userType"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <CheckBox
                android:id="@+id/isProvider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:text="@string/provider" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <CheckBox
                android:id="@+id/isConsumer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/Consumer" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estimatedTime"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/timePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:ems="10"
                android:inputType="time" />
        </TableRow>

    <TableRow>
        <Button
            android:id="@+id/submitRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="register"
            android:text="@string/submitButton" />


    </TableRow>
    </TableLayout>

</LinearLayout>
    </ScrollView>